--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
+<!DOCTYPE html>
 <html>
- <head>
- <h1>Taox Wizard</h1>
- </head>
- <body>
-  <li><a href="repository.taoxwizard-1.0.0.zip">repository.taoxwizard-1.0.0.zip</a><td></td></li>
-  </ul>
-</body></html>
+<body>
+<h1>Taox Wizard</h1>
+<li><a href="repository.taoxwizard-1.0.0.zip">repository.taoxwizard-1.0.0.zip</a></li>
+<li><a href="plugin.program.taoxwizard19.zip">plugin.program.taoxwizard19.zip</a></li>
+</body>
+</html>
